Internacionalización actualizada. Cambios: En las vistas se ha introducido la función de traducción _ Se ha sustituido la función u"string" por unicode(string)

--- a/webapp/locale/en/LC_MESSAGES/django.po
+++ b/webapp/locale/en/LC_MESSAGES/django.po
@@ -8,27 +8,204 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-30 01:25+0100\n"
+"POT-Creation-Date: 2014-04-15 16:04+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
 
-#: templates/webapp/index.html:61
+#: .\views.py:57 .\views.py:161
+msgid "Passwords don't match"
+msgstr "Passwords don't match"
+
+#: .\views.py:62
+msgid "Username alerady taken"
+msgstr "Username alerady taken"
+
+#: templates/webapp/base.html.py:28
+msgid "Toggle navigation"
+msgstr "Toggle navigation"
+
+#: templates/webapp/base.html.py:40
+msgid "Home"
+msgstr "Home"
+
+#: templates/webapp/base.html.py:41 .\profile.html.py:19
+msgid "Recipes"
+msgstr "Recipes"
+
+#: templates/webapp/base.html.py:42
+msgid "Explore"
+msgstr "Explore"
+
+#: templates/webapp/base.html.py:60
 msgid "Hello"
 msgstr "Hello"
 
-#: templates/webapp/login.html:31
+#: templates/webapp/base.html.py:68
+msgid "Profile"
+msgstr "Profile"
+
+#: templates/webapp/base.html.py:71
+msgid "Logout"
+msgstr "Logout"
+
+#: templates/webapp/base.html.py:77
+msgid "Add recipe"
+msgstr "Add recipe"
+
+#: templates/webapp/base.html.py:83
+msgid "Sign-up"
+msgstr "Sign-up"
+
+#: templates/webapp/following.html.py:23
+msgid "No recipes yet"
+msgstr "No recipes yet"
+
+#: templates/webapp/following.html.py:31
+msgid "Don't you have friends? Let's make some!"
+msgstr "Don't you have friends? Let's make some!"
+
+#: templates/webapp/following.html.py:35
+msgid "has no friends yet"
+msgstr "has no friends yet"
+
+#: templates/webapp/login.html.py:30
 msgid "Please sign in"
 msgstr "Please sign in"
 
-#: templates/webapp/login.html:44
+#: templates/webapp/login.html.py:43
 msgid "Remember me"
 msgstr "Remember me"
 
-#: templates/webapp/login.html:47
+#: templates/webapp/login.html.py:46
 msgid "Sign in"
 msgstr "Sign in"
+
+#: templates/webapp/logo.html.py:9
+msgid "This is a provisional starting page"
+msgstr "This is a provisional starting page"
+
+#: templates/webapp/logo.html.py:11
+msgid "Under construction"
+msgstr "Under construction"
+
+#: templates/webapp/newaccount.html.py:102 .\profile.html.py:43
+msgid "Edit profile"
+msgstr "Edit profile"
+
+#: templates/webapp/newaccount.html.py:104 .\newaccount.html.py:405
+msgid "Create account"
+msgstr "Create account"
+
+#: templates/webapp/newaccount.html.py:126
+msgid "Account information"
+msgstr "Account information"
+
+#: templates/webapp/newaccount.html.py:146 .\newaccount.html.py:159 .\newaccount.html.py:172
+#: templates/webapp/newaccount.html.py:185 .\newaccount.html.py:201 .\newaccount.html.py:224
+msgid "Required"
+msgstr "Required"
+
+#: templates/webapp/newaccount.html.py:189
+msgid "Profile information"
+msgstr "Profile information"
+
+#: templates/webapp/newaccount.html.py:323
+msgid "Consumer preferences"
+msgstr "Consumer preferences"
+
+#: templates/webapp/newaccount.html.py:403
+msgid "Save changes"
+msgstr "Save changes"
+
+#: templates/webapp/profile.html.py:21
+msgid "Followers"
+msgstr "Followers"
+
+#: templates/webapp/profile.html.py:23
+msgid "Following"
+msgstr "Following"
+
+#: templates/webapp/profile.html.py:27
+msgid "That's you!"
+msgstr "That's you!"
+
+#: templates/webapp/profile.html.py:29
+msgid "Unfollow"
+msgstr "Unfollow"
+
+#: templates/webapp/profile.html.py:36
+msgid "Unknown error"
+msgstr "Unknown error"
+
+#: templates/webapp/profile.html.py:39
+msgid "Done!"
+msgstr "Done!"
+
+#: templates/webapp/profile.html.py:52
+msgid "Basic info"
+msgstr "Basic info"
+
+#: templates/webapp/profile.html.py:56
+msgid "Email"
+msgstr "Email"
+
+#: templates/webapp/profile.html.py:64
+msgid "Language"
+msgstr "Language"
+
+#: templates/webapp/profile.html.py:94
+msgid "Check-in date"
+msgstr "Check-in date"
+
+#: templates/webapp/profile.html.py:129
+msgid "User info"
+msgstr "User info"
+
+#: templates/webapp/profile.html.py:133
+msgid "website"
+msgstr "website"
+
+#: templates/webapp/profile.html.py:141
+msgid "Gender"
+msgstr "Gender"
+
+#: templates/webapp/profile.html.py:187
+msgid "Personal info"
+msgstr "Personal info"
+
+#: templates/webapp/profile.html.py:191
+msgid "Bith date"
+msgstr "Bith date"
+
+#: templates/webapp/profile.html.py:199
+msgid "Last login"
+msgstr "Last login"
+
+#: templates/webapp/profile.html.py:228
+msgid "Savours profile"
+msgstr "Savours profile"
+
+#: templates/webapp/profile.html.py:230
+msgid "Salty"
+msgstr "Salty"
+
+#: templates/webapp/profile.html.py:239
+msgid "Sour"
+msgstr "Sour"
+
+#: templates/webapp/profile.html.py:248
+msgid "Bitter"
+msgstr "Bitter"
+
+#: templates/webapp/profile.html.py:257
+msgid "Sweet"
+msgstr "Sweet"
+
+#: templates/webapp/profile.html.py:266
+msgid "Spicy"
+msgstr "Spicy"
