--- a/webapp/locale/en/LC_MESSAGES/django.po
+++ b/webapp/locale/en/LC_MESSAGES/django.po
@@ -21,7 +21,7 @@ msgid "Recipes"
 msgstr "Recipes"
 
 msgid "Don't you have recipes? Let's make yourself one!"
-msgstr "Don't you have recipes? Let's make yourself one!"
+msgstr "No recipes yet? Start adding one!"
 
 #: .\views.py:57 .\views.py:161
 msgid "Passwords don't match"
