Cuando se visita la lista de recetas y no hay receta, el mensaje depende de si eres el propio usuario o no.

--- a/webapp/locale/en/LC_MESSAGES/django.po
+++ b/webapp/locale/en/LC_MESSAGES/django.po
@@ -17,6 +17,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: \n"
 
+msgid "This user doesn't has any recipe yet"
+msgstr "This user doesn't has any recipe yet"
+
 msgid "Recipes"
 msgstr "Recipes"
 
