correccion de error en el TAG

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-21 18:38+0200\n"
+"POT-Creation-Date: 2014-04-21 21:45+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -251,9 +251,13 @@ msgid ""
 "you know. Savours are measured in a relative way, of course. For more "
 "information, check Wikipedia or something, dude."
 msgstr ""
-"Los niveles de los sabores definen el sabor de tu receta. De este modo "
-"podemosrecomendar mejor tu receta a los gustos personales de cada personaLos "
-"valores de estos sabores son evidentemente relativos"
+"Los niveles de los sabores definen el sabor de tu receta. De este "
+"modopodemosrecomendar mejor tu receta a los gustos personales de cada "
+"persona.Los valores de estos sabores son evidentemente relativos"
+
+#: .\templates\webapp\newrecipe.html.py:760
+msgid "Save as draft"
+msgstr "Guardar como borrador"
 
 #: .\templates\webapp\profile.html.py:22
 msgid "Followers"
