--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-22 08:53+0200\n"
+"POT-Creation-Date: 2014-04-22 09:38+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -331,41 +331,45 @@ msgstr "Tiempo cocinándolo"
 msgid "Serves"
 msgstr "Comensales"
 
-#: .\templates\webapp\newrecipe.html.py:541
+#: .\templates\webapp\newrecipe.html.py:533
+msgid "Two persons or Five units"
+msgstr "2 personas o 5 unidades"
+
+#: .\templates\webapp\newrecipe.html.py:542
 msgid "Difficulty"
 msgstr "Dificultad"
 
-#: .\templates\webapp\newrecipe.html.py:561
+#: .\templates\webapp\newrecipe.html.py:562
 msgid "Temporality"
 msgstr "Temporada"
 
-#: .\templates\webapp\newrecipe.html.py:582
+#: .\templates\webapp\newrecipe.html.py:583
 msgid "Food type"
 msgstr "Tipo de comida"
 
-#: .\templates\webapp\newrecipe.html.py:603
+#: .\templates\webapp\newrecipe.html.py:604
 msgid "Special conditions"
 msgstr "Condiciones especiales"
 
-#: .\templates\webapp\newrecipe.html.py:624
+#: .\templates\webapp\newrecipe.html.py:625
 #: .\templates\webapp\profile.html.py:65
 msgid "Language"
 msgstr "Idioma"
 
-#: .\templates\webapp\newrecipe.html.py:645
+#: .\templates\webapp\newrecipe.html.py:646
 msgid "Free tags"
 msgstr "Etiquetas libres"
 
-#: .\templates\webapp\newrecipe.html.py:656
+#: .\templates\webapp\newrecipe.html.py:657
 msgid "Nationality"
 msgstr "Nacionalidad"
 
-#: .\templates\webapp\newrecipe.html.py:677
+#: .\templates\webapp\newrecipe.html.py:678
 #: .\templates\webapp\recipe_template.html.py:269
 msgid "Savours"
 msgstr "Sabores"
 
-#: .\templates\webapp\newrecipe.html.py:753
+#: .\templates\webapp\newrecipe.html.py:754
 msgid ""
 "Savour values defines the savour of your recipe and stuff. This way we can "
 "better recommend people your recipe based on ther personal tastes and so on, "
@@ -376,7 +380,7 @@ msgstr ""
 "modopodemosrecomendar mejor tu receta a los gustos personales de cada "
 "persona.Los valores de estos sabores son evidentemente relativos"
 
-#: .\templates\webapp\newrecipe.html.py:766
+#: .\templates\webapp\newrecipe.html.py:767
 msgid "Save as draft"
 msgstr "Guardar como borrador"
 
@@ -562,6 +566,110 @@ msgstr "Aún no tienes recetas"
 #: .\templates\webapp\recipes.html.py:42
 msgid "This user does not has any recipe yet"
 msgstr "Este usuario no tiene ninguna receta todavía"
+
+#: .\webapp\forms.py:9 .\webapp\forms.py:39
+msgid "English"
+msgstr "Inglés"
+
+#: .\webapp\forms.py:10 .\webapp\forms.py:39
+msgid "Spanish"
+msgstr "Español"
+
+#: .\webapp\forms.py:12
+msgid "Unspecified"
+msgstr "Sin especificar"
+
+#: .\webapp\forms.py:12
+msgid "Male"
+msgstr "Hombre"
+
+#: .\webapp\forms.py:12
+msgid "Female"
+msgstr "Mujer"
+
+#: .\webapp\forms.py:13 .\webapp\forms.py:40
+msgid "Spain"
+msgstr "España"
+
+#: .\webapp\forms.py:13 .\webapp\forms.py:40
+msgid "France"
+msgstr "Francia"
+
+#: .\webapp\forms.py:13 .\webapp\forms.py:40
+msgid "England"
+msgstr "Inglaterra"
+
+#: .\webapp\forms.py:13 .\webapp\forms.py:40
+msgid "USA"
+msgstr "EEUU"
+
+#: .\webapp\forms.py:41
+msgid "Summer"
+msgstr "Verano"
+
+#: .\webapp\forms.py:41
+msgid "Autumn"
+msgstr "Otoño"
+
+#: .\webapp\forms.py:41
+msgid "Spring"
+msgstr "Primavera"
+
+#: .\webapp\forms.py:41
+msgid "Winter"
+msgstr "Invierno"
+
+#: .\webapp\forms.py:42
+msgid "Dinner"
+msgstr "Cena"
+
+#: .\webapp\forms.py:42
+msgid "Lunch"
+msgstr "Almuerzo"
+
+#: .\webapp\forms.py:42
+msgid "Breakfast"
+msgstr "Desayuno"
+
+#: .\webapp\forms.py:42
+msgid "Picnic"
+msgstr "Picnic"
+
+#: .\webapp\forms.py:43
+msgid "Snack"
+msgstr "Tentempié"
+
+#: .\webapp\forms.py:43
+msgid "Drink"
+msgstr "Bebida"
+
+#: .\webapp\forms.py:43
+msgid "Dessert"
+msgstr "Postre"
+
+#: .\webapp\forms.py:44
+msgid "Diabetic"
+msgstr "Diabéticos"
+
+#: .\webapp\forms.py:44
+msgid "Celiac"
+msgstr "Celíacos"
+
+#: .\webapp\forms.py:44
+msgid "Vegetarian"
+msgstr "Vegetarianos"
+
+#: .\webapp\forms.py:45
+msgid "Easy"
+msgstr "Fácil"
+
+#: .\webapp\forms.py:45
+msgid "Medium"
+msgstr "Media"
+
+#: .\webapp\forms.py:45
+msgid "Hard"
+msgstr "Difícil"
 
 #: .\webapp\views.py:58 .\webapp\views.py:261
 msgid "Passwords don't match"
