--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-04-23 12:22+0200\n"
+"POT-Creation-Date: 2014-04-23 15:35+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -617,11 +617,11 @@ msgstr "No recipes yet"
 msgid "This user does not has any recipe yet"
 msgstr ""
 
-#: .\templates\webapp\terms_and_conditions.html.py:9
+#: .\templates\webapp\terms_and_conditions.html.py:14
 msgid "Terms and conditions"
 msgstr ""
 
-#: .\templates\webapp\terms_and_conditions.html.py:11
+#: .\templates\webapp\terms_and_conditions.html.py:15
 msgid ""
 "The following terms and conditions govern your use of the website give "
 "eathub.herokuapp.com and any of the content available on or through this web "
@@ -631,6 +631,254 @@ msgid ""
 "ACCEPT AND AGREE TO THESE TERMS AND CONDITIONS WITH REGARD TO YOUR USE OF "
 "THE WEB SITE. If you do not agree to these Terms and Conditions, you may not "
 "have access to it or use the Website in any other way."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:17
+msgid "1. Property Rights"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:18
+msgid ""
+"EatHub is the sole and exclusive owner of the rights to the title, content "
+"(including, for example, audio, photographs, illustrations, graphics, other "
+"visuals, video, copy, text, software, titles) codes, data and materials of "
+"the same, the look and feel, design and organization of the website, the "
+"compilation of the content, code, data and materials on the website, "
+"including but not limited to, any copyright, rights trademark, patent "
+"rights, database rights, moral rights, sui generis rights and other "
+"intellectual property, proprietary rights of the same, and in general all "
+"the Website. Use of the Web Site does not grant to you ownership of any "
+"content, code, data or materials you may access on or through the WebSite."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:20
+msgid "2. Prohibited Use"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:21
+msgid ""
+"Any distribution, publication or commercial or promotional exploitation of "
+"the Website or any content, code, data or materials on the Website is "
+"strictly prohibited unless you have received the express prior written "
+"permission from authorized personnel EatHub or any other applicable rights "
+"holder. Except as expressly provided in this agreement, you may not "
+"download, inform, display, publish, copy, reproduce, distribute, transmit, "
+"modify, perform, broadcast, transfer, create derivative works from, sell or "
+"otherwise exploit any of the content, code, data or materials on or "
+"available through the web Site. You further agree not to alter, edit, "
+"delete, remove, or otherwise change the meaning or appearance of, or "
+"repurpose, any of the content, code, data or materials on or available "
+"through the Website including, without limitation, the alteration or removal "
+"of any trademark, registered trademark, logo, service mark or any other "
+"proprietary content or proprietary rights notice. You acknowledge that you "
+"do not acquire any ownership rights by downloading any copyrighted material "
+"from or through the Website. If you make other use of the Website, or the "
+"content, code, data or materials that there are or available through the "
+"Website, except as provided above, you may violate copyright laws copyright "
+"and other laws of the European Union, as well as applicable state laws "
+"( Spain ), and may be subject to liability for such unauthorized use. "
+"'EatHub' is a site owned EATHUB. All contents on display are the sole "
+"property of  EATHUB. It is forbidden to total reproduction and / or parcial. "
+"Content on this site is the result of material produced by EATHUB, our "
+"partners and our users. Includes Recipes, comments or images in culinary or "
+"related field. All content is governed by these terms and conditions. Users "
+"and reviewers are solely responsible for the content they publish and "
+"transmit through the site, and shall indemnify EATHUB. possible claims "
+"against them generated.The accuracy and quality of the recipes are the "
+"responsibility of the author. The rating both recipes as places reflects the "
+"experience of our users. All content is for informational purposes. EATHUB. "
+"assumes no responsibility for any decisions that arrives the receiver of the "
+"information nor for any damage caused by insufficient accuracy of the data "
+"entered."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:23
+msgid "3. Trademarks"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:24
+msgid ""
+"The trademarks, logos, service marks, trademarks (collectively the "
+"Trademarks) displayed on the Website or on content available through the "
+"Website are Trademarks of EatHub, and registered and unregistered other, and "
+"can not be used in connection with products and / or services that are not "
+"related, associated, or sponsored by their rights holders that are likely to "
+"cause confusion among customers, or in any manner that disparages or "
+"discredits their rights holders. All Trademarks non EatHub displayed on the "
+"Website or on or through the services of the Website, if any, are the "
+"property of their respective owners. Nothing contained on the Site should be "
+"construed as granting, by implication, estoppel, or otherwise, any license "
+"or right to use any Trademark displayed in the Site without the written "
+"permission of EatHub or third party that may own such Trademark. The misuse "
+"of the Trademarks displayed on the Website or on or through any of the "
+"services of the Website is strictly prohibited."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:26
+#, fuzzy
+msgid "4. User Information"
+msgstr "Profile information"
+
+#: .\templates\webapp\terms_and_conditions.html.py:27
+msgid ""
+"In the course of your use of the Website and / or the services made "
+"available on or through the Web Site, you may be asked to provide certain "
+"personalized information (such information referred to as 'User "
+"Information'. Use policies and information collection EatHub with respect to "
+"the privacy of such User Information are set forth in the Privacy Policy of "
+"the Website, which is incorporated therein by reference for all purposes. "
+"You acknowledge and agree to be solely responsible for the accuracy of the "
+"content of the User Information."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:29
+msgid "5. Links to the Website"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:30
+msgid ""
+"You agree that if you include a ( link) link any other website to the "
+"Website, the link will open in a new window navigator and linked with the "
+"full version of an HTML formatted page of this Website. You are not allowed "
+"to link directly to any image stored on the Website or our services, such "
+"method is to use a button 'in - line' to cause the image stored by us was "
+"exposed on another website. You agree not to download or use stored on this "
+"Website on another web site, images for any purpose, including, without "
+"limitation, posting such images on another web site. You agree not to link "
+"from any other web site to this Web Site so that the Site, or any page of "
+"the Web Site, is framed, surrounded or obfuscated by the contents, materials "
+"or slots mark of any third. We reserve all of our rights under the law to "
+"insist that any link to the Website is discontinued and revoke your right to "
+"link to the Website from any other website at any time when we send written "
+"notice."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:32
+msgid "6. Compensation"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:33
+msgid ""
+"You agree to indemnify and hold harmless get to, directors, officers, "
+"employees, agents EatHub and its subsidiaries from any claims, liabilities, "
+"costs and expenses, of any nature, including fees lawyers, they incur as a "
+"result of using the web Site, your placement or transmission of any message, "
+"content, information, software or other materials through the web Site, or "
+"your breach or violation of the law or of these Terms and Conditions. EatHub "
+"reserves the right, at its own expense, to assume the exclusive defense and "
+"control of any matter otherwise subject to indemnification by you, and in "
+"such case, you agree to cooperate with EatHub in the defense of such claim."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:35
+msgid "7. Third Party Websites"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:36
+msgid ""
+"You can link (link) Web Site to third party web sites and third can be "
+"linked to ('Linked Sites') Website. You acknowledge and agree that we have "
+"no responsibility for the information, content, products, services, "
+"advertising, code or other materials which may or may not be provided by or "
+"through Linked Sites, even if they are owned or are led by our affiliates. "
+"The links ( links) to Linked Sites do not constitute an endorsement or our "
+"sponsorship of such sites or the information, content, products, services, "
+"advertising, code or other materials presented on or through such websites. "
+"The inclusion of any link to such sites on our Site does not imply "
+"endorsement, sponsorship or recommendation of the Web Site, EatHub disclaims "
+"any liability for links ( 1) from another web site to this Website and ( 2) "
+"another website to this Website. EatHub can not guarantee the standards of "
+"any web site to which you provide links on this Site, or be EatHub "
+"responsible for the contents of such sites, or any subsequent link. EatHub "
+"does not represent or warrant that the content of any third party website "
+"are accurate, to comply with state or federal law, or to comply with the "
+"laws of copyright or other intellectual property laws. EatHub is not "
+"responsible for any form of transmission received from any linked website. "
+"Any reliance on the contents of a third party website is done at your own "
+"risk and you assume all responsibilities and consequences resulting from "
+"such reliance."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:38
+msgid "8. Copyright Agent"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:39
+msgid ""
+"In the event that any User or third party considers that any content have "
+"been introduced into the portal with violation of their intellectual "
+"property rights should send a fax to the company containing the following "
+"elements: ( a) personal data : name, address, phone number and email address "
+"of the claimant, ( b ) authentic or equivalently, with the personal data of "
+"the owner of the copyright allegedly infringed or person lawfully authorized "
+"to act on behalf and for (c) precise and complete indication of protected by "
+"intellectual property rights allegedly infringed, and its location on the "
+"portal; ; account holder of the copyright allegedly infringed ( d ) A clear "
+"statement that introducing indicated content was carried out without the "
+"consent of the responsibility of the claimant that the information in the "
+"notification is accurate and that the introduction of content is a violation "
+"of their intellectual property rights."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:40
+msgid ""
+"These notifications must be sent to: Av.Constitución # 8, CP Spain 41004, "
+"Fax 954 78 59 89"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:41
+msgid ""
+"If the letter and information provided, it appears that they are violating "
+"the intellectual right of a person, EatHub immediately suspend public access "
+"to the relevant information, and make available to the owner."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:44
+msgid "9. Effectiveness"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:45
+msgid ""
+"The provision of the Website and other services is indefinite. EatHub "
+"however, may terminate, suspend or discontinue at any time and without prior "
+"notice, the provision of services on the Website and / or any of the "
+"Services (including Open the User Services)."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:47
+msgid "10. Law and Jurisdiction"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:48
+msgid ""
+"For the interpretation, compliance and enforcement of these Terms and "
+"Conditions of Use of the Website, EatHub and the User agree to submit to the "
+"jurisdiction of the competent courts in Spain, renouncing the jurisdiction "
+"that under their existing or future or addresses for any other reason may "
+"apply and will be governed by the provisions applicable in the Spanish and "
+"European laws."
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:50
+msgid "11. API"
+msgstr ""
+
+#: .\templates\webapp\terms_and_conditions.html.py:51
+msgid ""
+"You are granted a limited, non exclusive, non sublicensable right to access "
+"the EatHub Application Programming Interface (API) of the terms specified "
+"herein. This website, the content API and are available for personal, "
+"noncommercial use. Any other use, including but not limited to any "
+"commercial use or reproduction of large distribution, modification, "
+"republication, display or performance, without the prior written permission "
+"of EatHub, is strictly prohibited. You may reproduce, modify, create "
+"derivative works from, or otherwise exploit any content, code, data or "
+"materials available through the API, provided they clearly indicate the "
+"original author of the recipe, maintaining and publishing the EatHub name "
+"provider and provided that the beneficiary of the API link directly to the "
+"website EatHub. We reserve the right, without notice and in our sole "
+"discretion, to terminate your license to use the API. The violation of any "
+"of these terms or conditions that you may be subject to legal action."
 msgstr ""
 
 #: .\webapp\forms.py:9 .\webapp\forms.py:39
